--- a/styles.css
+++ b/styles.css
@@ -1,32 +1,40 @@
-/* * {
-    margin: 0px;
+* {
+    margin: 3px;
     border: 3px;
-} */
-.container {
-    height: 170px;
-    width: 90%;
+}
+
+
+.wrapper {
+    width: 920px;
     margin: auto;
-    background: rgba(189, 207, 231, 0.425);
+    padding-left: 100px;
+    background: rgba(189, 207, 231, 0.425);90%
+    padding-bottom: 40px;
+}
+.container {
+    margin-top: 10px !important;
+    /* height: 170px; */
+    width: 600px;
+    /* margin: auto; */
+    margin-bottom: 20px;
+
 }
 
 .leftcontent {
-    /* border-top: solid 3px;
-    border-right: solid 3px; */
     width: 200px;
     float: left;
     margin: 10px;
     overflow: hidden;
-    /* border-top-right-radius: 20px;*/
 } 
-.right {
+ .right {
     background: #ffffff;
     border-radius: 15px;
     border-radius: 20px;
-    /* float: left; */
     width: 560px;
     overflow: hidden;
+    margin: 0px;
     padding: 20px;
-}
+} 
 
 .leftcontent img {
     height: 150px;
@@ -38,17 +46,17 @@ h1, p {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 .header {
-    height: 200px;
-    width: 90%;
+    height: 216px;
+    width: 100%;
     margin: auto;
-    background: rgba(189, 207, 231, 0.425);
+    /* background: rgba(189, 207, 231, 0.425); */
     padding-top: 40px;
 
 }
 
 .header .head {
-    margin-top: 80px;
-    width: 560px;
+    margin-top: 30px;
+    width: fit-content;
     overflow: hidden;
     padding: 20px;
 }
@@ -56,7 +64,9 @@ h1, p {
 /* .right ul {
     display: block;
 } */
-
+ul {
+    display: block;
+}
 .right ul li {
     display: inline;
     list-style-type: none;
@@ -65,6 +75,7 @@ h1, p {
     border-radius: 6px;
     padding: 8px;
     margin: 2px;
+    float: left;
 }
 .right p strong {
     display: inline;
@@ -76,3 +87,160 @@ h1, p {
     /* margin: 0px; */
     /* margin-top: 20px; */
 }
+
+
+
+
+.button {
+    background-color: rgb(102, 17, 187);
+    border: 2px solid white;
+    border-radius: 30px;
+    text-decoration: none;
+    padding: 10px 28px;
+    color: white;
+    margin-top: 10px;
+    display: inline-block;
+}
+
+
+button {
+    cursor: pointer;
+	background-color: rgb(102, 17, 187);;
+	border: 2px solid white;
+	border-radius: 30px;
+	text-decoration: none;
+	padding: 10px 28px;
+	color: white;
+	margin-top: 10px;
+	display: inline-block;
+	
+}
+
+button:hover {
+		background-color: rgb(83, 0, 236);
+		color: #ffffff;
+		border: 2px solid #ffffff;
+	}
+
+.modal {
+	background-color: rgba(7, 42, 87, 0.767);;
+	width: 100%;
+	height: 120%;
+	position: absolute;
+	top: 0;
+	display: none;
+	justify-content: center;
+	align-items: center;
+}
+
+.modal-contents {
+	height: 400px;
+	width: 500px;
+	background-color: white;
+	text-align: center;
+	padding: 10px;
+	position: relative;
+	border-radius: 4px;
+}
+
+.modal-contents h4 {
+    font-family: 'Franklin Gothic Medium';
+    color: #666;
+}
+
+input {
+	margin: 15px auto;
+	display: block;
+	width: 50%;
+	padding: 8px;
+	border: 1px solid gray;
+}
+
+.close {
+	position: absolute;
+	top: 0;
+	right: 10px;
+	font-size: 42px;
+	color: rgb(102, 17, 187);;
+	transform: rotate(45deg);
+	cursor: pointer;
+	
+}
+
+.close:hover {
+		color: #666;
+}
+
+fieldset {
+	border: medium none;
+	margin: 0 0 10px;
+	min-width: 100%;
+	padding: 0;
+	width: 50%;
+}
+
+textarea {
+  width:50%;
+  border:1px solid #CCC;
+  background:#FFF;
+  margin:0 0 5px;
+  padding:10px;
+}
+
+@media only screen and (max-width: 576px) {
+    .wrapper {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        padding-left: 0;
+    }
+
+    .modal {
+        width: 100%;
+        height: 100%;
+    }
+
+    .head a {
+        margin-left: 30%;
+    }
+    .head h1 {
+        width: 70%;
+        margin: auto;   
+        font-size: 1.5em;
+
+    }
+    .head p {
+        width: 50%;
+        margin: auto;
+    }
+
+    .header .head {
+        width: 85%;
+    }
+    .container {
+
+    }
+    .right {
+        width: 85%;
+    }
+    .leftcontent {
+        align-content: center;
+        width: fit-content;
+        margin: auto;
+        /* float: left; */
+        padding-left: 25%;
+        overflow: hidden;
+    }
+    .header {
+        height: 350px;
+        width: 100%;
+        margin: auto;
+        /* background: rgba(189, 207, 231, 0.425); */
+        padding-top: 40px;
+    
+    }
+    .container {
+        width: 100%;
+    }
+}
+
